# I-love-you

./: .gitignore  bug.txt
.github/workflows/: qt-rewrite-build.yml
musci/: CMakeLists.txt  main.cpp
qt-rewrite/: .gitignore  CMakeLists.txt  LoginPopup.qml  LyricOverlay.qml  Main.qml  PlaylistHeader.qml  QT_REWRITE_TASKS.md  UserMenuPopup.qml  log.txt  login-log.txt  login.txt  main.cpp  start_apis.js
qt-rewrite/data/: feedback.json
qt-rewrite/music-api/: package.json  start_apis.js  start_server.js
qt-rewrite/music-api/QQMusicApi/routes/: login.js
qt-rewrite/music-api/data/: feedback.json
qt-rewrite/src/: core_types.h  disk_cache.cpp  disk_cache.h  gdstudio_provider.cpp  gdstudio_provider.h  http_client.cpp  http_client.h  json_utils.cpp  json_utils.h  logger.cpp  logger.h  lyric_list_model.cpp  lyric_list_model.h  memory_cache.h  music_controller.cpp  music_controller.h  netease_provider.cpp  netease_provider.h  playlist_list_model.cpp  playlist_list_model.h  provider.h  provider_manager.cpp  provider_manager.h  qq_provider.cpp  qq_provider.h  qqmusic_provider.cpp  qqmusic_provider.h  song_list_model.cpp  song_list_model.h
qt-rewrite/tests/: golden_cases.json
